--- a/index.html
+++ b/index.html
@@ -143,10 +143,10 @@
                 <ul class="nav">
                     <li class="nav-item"><a class="nav-link" href="index.html">Accueil</a></li>
                     <li class="nav-item"><a class="nav-link" href="a-propos.html">À propos</a></li>
-                    <li class="nav-item"><a class="nav-link" href="calendrier.html">Calendrier</a></li>
-                    <li class="nav-item"><a class="nav-link" href="equipes.html">Équipes</a></li>
+                    <li class="nav-item"><a class="nav-link" href="Calendrier.html">Calendrier</a></li>
+                    <li class="nav-item"><a class="nav-link" href="Equipes.html">Équipes</a></li>
                     <li class="nav-item"><a class="nav-link" href="stades.html">Stades</a></li>
-                    <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link" href="Contact.html">Contact</a></li>
                 </ul>
             </nav>
         </div>
