--- a/Equipes.html
+++ b/Equipes.html
@@ -267,7 +267,7 @@
                     République tchèque
                 </li>
                 <li class="list-group-item d-flex align-items-center">
-                    <img src="logos/algerie.png" alt="Algérie" class="me-2" width="30" height="30">
+                    <img src="../logos/algerie.png" alt="Algérie" class="me-2" width="30" height="30">
                     Algérie
                 </li>
                 <li class="list-group-item d-flex align-items-center">
